feat: incorporado scroll automatico

--- a/index.html
+++ b/index.html
@@ -19,33 +19,10 @@
             <img src="images/progress.svg" alt="">
         </small>
         <section class="content__chat">
-            <p class="message user">
-                <img src="images/person.svg"></img> 
-                <span>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quam et neque, nostrum perspiciatis ipsa dolorem
-                </span> 
-            </p>
-
-            <p class="message assistant">
-                <img src="images/robot.svg"></img> 
-                <span>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex, alias architecto? Error ut volup
-                </span> 
-            </p>
-
-            <p class="message user">
-                <img src="images/person.svg"></img> 
-                <span>
-                    Lorem ipsum dolor sit 
-                </span> 
-            </p>
-
-            <p class="message assistant">
-                <img src="images/robot.svg"></img> 
-                <span>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit
-                </span> 
-            </p>
+            <!-- <p class="message user">
+                <img src="images/person.svg"> 
+                <span>Hola</span> 
+            </p> -->
         </section>
         <form action="" id="chat-form">
             <input type="text" placeholder="Escribe un mensaje" id="chat-input" autocomplete="off">
