--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <meta http-equiv="Content-Security-Policy" content="script-src-elem 'self' https://*">
     <script defer src="script.js" type="module"></script>
     <title>Chat-bot</title>
 </head>
